# potter-kata-testy

./: .gitmodules  CMakeLists.txt  README.md
include/potter/: potter.hpp
src/: potter.cpp
tests/: CMakeLists.txt  potter_tests.cpp  test_main.cpp
